--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
         </div>
     </header>
     <main>
-        <!-- hero section -->
+        <!--1 hero section -->
         <section class="hero-item">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button class="hero-button" type="button"> Order Service</button>
             </div>
         </section>
-        <!-- Principles -->
+        <!--2 Principles -->
 
         <section class="principles">
             <div class="container">
                 <h2 class="title visualli-hidden">Our principles</h2>
                 <ul class="list princ-list">
                     <li class="set-principle">
-                        <ul>
-                            <li class="icon"><svg width="60" height="64">
-                                    <use href="./images/icon/svg-sprite2.svg#icon-antenna"></use>
-                                </svg></li>
-                        </ul>
+
+                        <div class="icon"><svg width="60" height="64">
+                                <use href="./images/icon/icons.svg#icon-antenna"></use>
+                            </svg></div>
+
 
                         <h3 class="principles-item">Strategy</h3>
                         <p class="principles-list">Our goal is to identify the business
@@ -68,11 +68,11 @@
 
                     </li>
                     <li class="set-principle">
-                        <ul>
-                            <li class="icon"><svg width="60" height="64">
-                                    <use href="./images/icon/svg-sprite2.svg#icon-clock"></use>
-                                </svg></li>
-                        </ul>
+
+                        <div class="icon"><svg width="60" height="64">
+                                <use href="./images/icon/icons.svg#icon-clock"></use>
+                            </svg></div>
+
 
                         <h3 class="principles-item">Punctuality</h3>
                         <p class="principles-list">Bring the key message to the brand's audience for the best price
@@ -81,11 +81,11 @@
                             time.</p>
                     </li>
                     <li class="set-principle">
-                        <ul>
-                            <li class="icon"><svg width="60" height="64">
-                                    <use href="./images/icon/svg-sprite2.svg#icon-Vector"></use>
-                                </svg></li>
-                        </ul>
+
+                        <div class="icon"><svg width="60" height="64">
+                                <use href="./images/icon/icons.svg#icon-Vector"></use>
+                            </svg></div>
+
 
                         <h3 class="principles-item">Diligence</h3>
                         <p class="principles-list">Research and confirm brands that present the strongest digital growth
@@ -93,11 +93,11 @@
                             risk.</p>
                     </li>
                     <li class="set-principle">
-                        <ul>
-                            <li class="icon"><svg width="65" height="64">
-                                    <use href="./images/icon/svg-sprite2.svg#icon-astronaut"></use>
-                                </svg></li>
-                        </ul>
+
+                        <div class="icon"><svg width="65" height="64">
+                                <use href="./images/icon/icons.svg#icon-astronaut"></use>
+                            </svg></div>
+
 
                         <h3 class="principles-item">Technologies</h3>
                         <p class="principles-list">Design practice focused on digital experiences. We bring forth a deep
@@ -108,7 +108,7 @@
                 </ul>
             </div>
         </section>
-        <!-- Our work -->
+        <!--3 Our work -->
         <section class="our-work">
             <div class="container">
                 <h2 class="work-item">What are we doing</h2>
@@ -119,7 +119,7 @@
                 </ul>
             </div>
         </section>
-        <!-- Team -->
+        <!--4 Team -->
         <section class="team">
             <div class="container team-wrapper">
                 <h2 class="team-item">Our Team</h2>
@@ -130,33 +130,33 @@
                             <h3 class="people-names">Mark Guerrero</h3>
                             <p class="team-position">Product Designer</p>
                             <ul class="social list">
-                                <li>
+                                <li class="social-list">
                                     <a class="social-link" href="">
-                                        <svg width="16" height="16">
+                                        <svg class="social-team-svg" width="16" height="16">
                                             <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list">
                                     <a class="social-link" href="">
-                                        <svg width="16" height="16">
+                                        <svg class="social-team-svg" width="16" height="16">
                                             <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list">
                                     <a class="social-link" href="">
-                                        <svg width="16" height="16">
+                                        <svg class="social-team-svg" width="16" height="16">
                                             <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="social-list">
                                     <a class="social-link" href="">
-                                        <svg width="16" height="16">
+                                        <svg class="social-team-svg" width="16" height="16">
                                             <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
                                             </use>
                                         </svg>
@@ -292,30 +292,48 @@
             </div>
         </section>
 
-        <!-- Company -->
+        <!--5 Company -->
         <section class="company">
             <div class="container company-list">
                 <h2 class="our-customers">Customers</h2>
                 <div>
                     <ul class="list title-company">
-                        <li class="icon-company"><svg width="60" height="64">
-                                <use class="icon-hover" href="./images/icon/svg-sprite2.svg#icon-yaco"></use>
-                            </svg></li>
-                        <li class="icon-company"><svg width="60" height="64">
-                                <use href="./images/icon/svg-sprite2.svg#icon-tagline-here"></use>
-                            </svg></li>
-                        <li class="icon-company"><svg width="60" height="64">
-                                <use href="./images/icon/svg-sprite2.svg#icon-Logo-company"></use>
-                            </svg></li>
-                        <li class="icon-company"><svg width="60" height="64">
-                                <use href="./images/icon/svg-sprite2.svg#icon-foster-peters"></use>
-                            </svg></li>
-                        <li class="icon-company"><svg width="60" height="64">
-                                <use href="./images/icon/svg-sprite2.svg#icon-brand"></use>
-                            </svg></li>
-                        <li class="icon-company"><svg width="60" height="64">
-                                <use href="./images/icon/svg-sprite2.svg#icon-tagline-company"></use>
-                            </svg></li>
+                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
+                                    height="56">
+                                    <use class="icon-hover" href="./images/icon/icons.svg#icon-yaco"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
+                                    height="56">
+                                    <use href="./images/icon/icons.svg#icon-tagline-here"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
+                                    height="56">
+                                    <use href="./images/icon/icons.svg#icon-Logo-company"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
+                                    height="56">
+                                    <use href="./images/icon/icons.svg#icon-foster-peters"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
+                                    height="56">
+                                    <use href="./images/icon/icons.svg#icon-brand"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
+                                    height="56">
+                                    <use href="./images/icon/icons.svg#icon-tagline-company"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -325,37 +343,45 @@
 
 
     <footer class="footer-list">
-        <div class="container">
+        <div class="container oll-footer">
+            <div class="logo-container">
+                <a class="link web-color logo" href="./index.html">Web<span
+                        class="link studio-color-item">Studio</span></a>
+                <p class="footer-content">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    &
+                    growth solutions.</p>
+            </div>
             <div class="social-container">
-                <h2 class="social-item">Social</h2>
+                <p class="social-item">Social media</p>
                 <ul class="list footer-social">
-                    <li>
+                    <li class="footer-social-item">
                         <a class="social-link-footer" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-social-svg" width="24" height="24">
                                 <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-social-item">
                         <a class="social-link-footer" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-social-svg" width="24" height="24">
                                 <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-social-item">
                         <a class="social-link-footer" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-social-svg" width="24" height="24">
                                 <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-social-item">
                         <a class="social-link-footer" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-social-svg" width="24" height="24">
                                 <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
                                 </use>
                             </svg>
@@ -363,11 +389,9 @@
                     </li>
                 </ul>
             </div>
-            <a class="link web-color logo" href="./index.html">Web<span class="link studio-color-item">Studio</span></a>
-            <p class="footer-content">Increase the flow of customers and sales for your business with digital
-                marketing
-                &
-                growth solutions.</p>
+
+
+
 
         </div>
     </footer>
