--- a/portfolio.html
+++ b/portfolio.html
@@ -62,14 +62,15 @@
                         </a>
                     </li>
                     <li class="set-item">
-                        <a class="link" href="/"><img src="./images/portfolio/payment.jpg" alt="Payment" width="360">
+                        <a class="link link-item" href="/"><img src="./images/portfolio/payment.jpg" alt="Payment"
+                                width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Cashless Payment</h2>
                                 <p class="row-contents">Marketing</p>
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/meditapp.jpg"
+                    <li class="set-item"><a class="link link-item" href="/"><img src="./images/portfolio/meditapp.jpg"
                                 alt="Meditation App" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Meditation App</h2>
@@ -77,7 +78,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/Taxserv.jpg"
+                    <li class="set-item"><a class="link link-item" href="/"><img src="./images/portfolio/Taxserv.jpg"
                                 alt="Taxi Service" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Taxi Service</h2>
@@ -85,7 +86,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/Screenill.jpg"
+                    <li class="set-item"><a class="link link-item" href="/"><img src="./images/portfolio/Screenill.jpg"
                                 alt="Screen Illustrations" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Screen Illustrations</h2>
@@ -93,23 +94,23 @@
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/Onlinecourses.jpg"
-                                alt="Online Courses" width="360">
+                    <li class="set-item"><a class="link link-item" href="/"><img
+                                src="./images/portfolio/Onlinecourses.jpg" alt="Online Courses" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Online Courses</h2>
                                 <p class="row-contents">Marketing</p>
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/Inststrconcept.jpg"
-                                alt="Instagram Stories Concept" width="360">
+                    <li class="set-item"><a class="link link-item" href="/"><img
+                                src="./images/portfolio/Inststrconcept.jpg" alt="Instagram Stories Concept" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Instagram Stories Concept</h2>
                                 <p class="row-contents">Design</p>
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href=""><img src="./images/portfolio/Organikfood.jpg"
+                    <li class="set-item"><a class="link link-item" href=""><img src="./images/portfolio/Organikfood.jpg"
                                 alt="Organic Food" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Organic Food</h2>
@@ -117,8 +118,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/Freshcoffee.jpg"
-                                alt="Fresh Coffee" width="360">
+                    <li class="set-item"><a class="link link-item" href="/"><img
+                                src="./images/portfolio/Freshcoffee.jpg" alt="Fresh Coffee" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Fresh Coffee</h2>
                                 <p class="row-contents">Web Site</p>
@@ -131,47 +132,56 @@
     </main>
     <!-- footer -->
     <footer class="footer-list">
-        <div class="container">
-            <h2 class="social-item">Social</h2>
-            <ul class="list footer-social">
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-            <a class="link web-color logo" href="./index.html">Web<span class="link studio-color-item">Studio</span></a>
-            <p class="footer-content">Increase the flow of customers and sales for your business with digital
-                marketing
-                &
-                growth solutions.</p>
+        <div class="container oll-footer">
+            <div class="logo-container">
+                <a class="link web-color logo" href="./index.html">Web<span
+                        class="link studio-color-item">Studio</span></a>
+                <p class="footer-content">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div class="social-container">
+                <p class="social-item">Social media</p>
+                <ul class="list footer-social">
+                    <li class="footer-social-item">
+                        <a class="social-link-footer" href="">
+                            <svg class="footer-social-svg" width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="social-link-footer" href="">
+                            <svg class="footer-social-svg" width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="social-link-footer" href="">
+                            <svg class="footer-social-svg" width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="social-link-footer" href="">
+                            <svg class="footer-social-svg" width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
+
+
         </div>
     </footer>
 </body>
